--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="./css/reset.css" />
   </head>
   <body>
-    <button><a href="1-gallery.html">Gallery</a></button>
+    <form>
+      <input type="text" placeholder="Search images..." />
+      <button type="submit" class="">Search</button>
+    </form>
   </body>
 </html>
