--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,10 @@
   </head>
   <body>
     <form>
-      <input type="text" placeholder="Search images..." />
-      <button type="submit" class="">Search</button>
+      <input type="text" name="input" placeholder="Search images..." />
+      <button type="submit">Search</button>
     </form>
+    <ul class="gallery"></ul>
+    <script src="./main.js" type="module"></script>
   </body>
 </html>
