--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
       <button type="submit">Search</button>
     </form>
     <ul class="gallery"></ul>
+    <div class="loader"></div>
     <script src="./main.js" type="module"></script>
   </body>
 </html>
